--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -148,6 +148,8 @@
     position: absolute;
     right: -15px;
     height: 150px;
+    width: 100%;
+    max-width: 150px;
     top: 0;
     transition: .2s all ease-in-out;
 }
